--- a/package.json
+++ b/package.json
@@ -22,7 +22,7 @@
     "circular-buffer": "1.0.2",
     "cryptiles": "^4.1.3",
     "cryptoforknote-util": "git+https://github.com/MoneroOcean/node-cryptoforknote-util.git#v3.0.0",
-    "cryptonight-hashing": "git+https://github.com/uPlexa/node-cryptonight-hashing.git",
+    "cryptonight-hashing": "git+https://github.com/MoneroOcean/node-cryptonight-hashing.git#v9.0.2",
     "debug": "2.6.9",
     "express": "4.14.0",
     "fresh": "^0.5.2",
