Buffer() porting and waznation. v0.9.3-beta :palm_tree:
Porting to the Buffer.from()/Buffer.alloc() API because of no support of older Node.js version. Does it work? :joy:

--- a/config_example.json
+++ b/config_example.json
@@ -1,7 +1,7 @@
 {
   "pools": [
     {
-      "hostname": "dig.wazn.io",
+      "hostname": "pool.wazn.io",
       "port": 49999,
       "ssl": false,
       "allowSelfSignedSSL": false,
