--- a/package.json
+++ b/package.json
@@ -1,7 +1,10 @@
 {
   "name": "wazn-proxy",
-  "version": "0.9.0",
-  "description": "WAZN proxy for Node.js Pool",
+  "version": "0.9.3-beta",
+  "description": "WAZN Proxy for Node.js Pool",
+  "author": "Multiple",
+  "maintained by": "vermin",
+  "license": "EUPL-1.2",
   "main": "proxy.js",
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1"
@@ -10,27 +13,25 @@
     "type": "git",
     "url": "git+https://github.com/project-wazn/wazn-proxy.git"
   },
-  "author": "Multiple",
-  "license": "EUPL-1.2",
   "bugs": {
     "url": "https://github.com/project-wazn/wazn-proxy/issues"
   },
   "homepage": "https://github.com/project-wazn/wazn-proxy#readme",
   "dependencies": {
+    "@hapi/cryptiles": "^4.2.0",
+    "@hapi/hoek": "^8.2.1",
     "async": "2.1.4",
-    "bignum": "^0.12.5",
+    "bignum": "^0.13.0",
     "circular-buffer": "1.0.2",
-    "cryptiles": "^4.1.3",
     "cryptoforknote-util": "git+https://github.com/MoneroOcean/node-cryptoforknote-util.git#v3.0.0",
-    "cryptonight-hashing": "git+https://github.com/MoneroOcean/node-cryptonight-hashing.git#v9.0.2",
+    "cryptonight-hashing": "git+https://github.com/MoneroOcean/cryptonight-node-hashing.git#v9.0.2",
     "debug": "2.6.9",
-    "express": "4.14.0",
+    "express": "^4.17.1",
     "fresh": "^0.5.2",
     "fstream": "^1.0.12",
-    "hoek": "^6.1.3",
     "lodash": "^4.17.15",
     "mime": "^2.4.4",
-    "minimist": "^1.2.5",
+    "minimist": "^0.2.1",
     "moment": "2.21.0",
     "pm2": "^4.2.3",
     "request": "^2.88.2",
