--- a/package.json
+++ b/package.json
@@ -16,8 +16,8 @@
         "async": "2.1.4",
         "bignum": "^0.13.0",
         "circular-buffer": "1.0.2",
-        "wazn-utilities": "git://github.com/project-wazn/wazn-node-utilities.git",
-        "wazn-hashing": "git://github.com/project-wazn/wazn-node-hashing.git",
+        "waznutilities": "git://github.com/project-wazn/wazn-node-utilities.git",
+        "waznhashing": "git://github.com/project-wazn/wazn-node-hashing.git",
         "debug": "2.6.9",
         "express": "^4.17.1",
         "fresh": "^0.5.2",
